@@ -38,6 +38,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #20288: fix handling of invalid numeric charrefs in HTMLParser.
+
 - Issue #19456: ntpath.join() now joins relative paths correctly when a drive
   is present.
 
